# Mstore_customer_chat_bot

./: .gitignore  README.md  pyproject.toml  requirements.txt
backend/: main.py
backend/db/: sql_db.py
backend/routes/: chat.py  products.py
backend/services/: retrieval_gemini_ai.py  vector_store.py
data/: data_injection.py  make_sql.py
embedding/: pinecone_client.py
frontend/: README.md  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx
frontend/src/components/chat/: ChatBot.tsx
frontend/src/components/layout/: MainLayout.tsx
frontend/src/components/ui/: checkbox.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/src/utils/: imageMapper.ts
