[project]
name = "shop-assistant-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.136.3",
    "google-genai>=2.7.0",
    "google-generativeai>=0.8.6",
    "langchain>=1.3.2",
    "langchain-community>=0.4.2",
    "langchain-google-genai>=4.2.4",
    "langchain-openai>=1.2.2",
    "langchain-pinecone>=0.2.13",
    "mysql-connector-python>=9.7.0",
    "openai>=2.39.0",
    "panda>=0.3.1",
    "pinecone-client>=6.0.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "tiktoken>=0.13.0",
    "tqdm>=4.67.3",
    "uvicorn>=0.48.0",
]
